{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 53,
  "lineage": "2630abd2-bc0f-c2d1-c294-b37951f394c0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669948573359:vpc/vpc-0a5306d8b6d508c42",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07f01acd4f7ce3818",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-09bf42c7ef40294ba",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a5306d8b6d508c42",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-069f0fa14d1c22431",
            "owner_id": "669948573359"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669948573359:loadbalancer/app/week21-alb/809744bd9165456d",
            "arn_suffix": "app/week21-alb/809744bd9165456d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "week21-alb-571135867.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:669948573359:loadbalancer/app/week21-alb/809744bd9165456d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "week21-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00426202a669928a0",
              "sg-0c8aa752d6dfd057b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01bdfbc2ecb9ba072"
              },
              {
                "subnet_id": "subnet-0596562d8ae0d5a6b"
              },
              {
                "subnet_id": "subnet-06d53b63cb83dde21"
              },
              {
                "subnet_id": "subnet-0876315427ed80cf8"
              },
              {
                "subnet_id": "subnet-0bb15d9f56d1d17ca"
              },
              {
                "subnet_id": "subnet-0e20d6a3ac2b069a8"
              }
            ],
            "subnets": [
              "subnet-01bdfbc2ecb9ba072",
              "subnet-0596562d8ae0d5a6b",
              "subnet-06d53b63cb83dde21",
              "subnet-0876315427ed80cf8",
              "subnet-0bb15d9f56d1d17ca",
              "subnet-0e20d6a3ac2b069a8"
            ],
            "vpc_id": "vpc-0a5306d8b6d508c42",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_80_and_all",
            "aws_security_group.allow_http_alb",
            "data.aws_subnets.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669948573359:listener/app/week21-alb/809744bd9165456d/06cfca0e7cf66ccb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:669948573359:targetgroup/week21-alb-tg/61582a259c09a492",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:669948573359:listener/app/week21-alb/809744bd9165456d/06cfca0e7cf66ccb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:669948573359:loadbalancer/app/week21-alb/809744bd9165456d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.allow_80_and_all",
            "aws_security_group.allow_http_alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669948573359:targetgroup/week21-alb-tg/61582a259c09a492",
            "arn_suffix": "targetgroup/week21-alb-tg/61582a259c09a492",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:669948573359:targetgroup/week21-alb-tg/61582a259c09a492",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "week21-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a5306d8b6d508c42"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_80_and_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669948573359:security-group/sg-00426202a669928a0",
            "description": "Allow traffic on port 80 and all inbound/outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00426202a669928a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_80_and_all",
            "name_prefix": "",
            "owner_id": "669948573359",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a5306d8b6d508c42"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669948573359:security-group/sg-0c8aa752d6dfd057b",
            "description": "Allow HTTP traffic for ALB",
            "egress": [],
            "id": "sg-0c8aa752d6dfd057b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_alb",
            "name_prefix": "",
            "owner_id": "669948573359",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a5306d8b6d508c42"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}